--- a/style.css
+++ b/style.css
@@ -1,46 +1,180 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    outline: none;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: none;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
 }
 
-header {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    perspective: 100rem;
-    overflow: hidden;
+.first-container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  perspective: 100rem;
+  background-image: url(./assets/background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: grid;
+  place-content: center;
+  animation: movebackground 2s forwards ease-in-out;
+  overflow: hidden;
 }
-/* Styling for the image */
-.img-wrapper {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    overflow: hidden;
-    animation: movebackground 2s forwards ease-in-out;
+.container {
+  padding: 40px;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  max-width: 100%;
+  width: 600px;
+  margin: 10px;
 }
 
-.img-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.4;
-    
-}  
+.welcome {
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+  font-family: "Inter", sans-serif;
+  letter-spacing: 2px;
+  margin-bottom: 15px;
+  text-transform: capitalize;
+  text-shadow: 0 0.8rem 0.6rem rgba(0, 0, 0, 0.4);
+  overflow: hidden; /* Hide overflow to simulate typing effect */
+  white-space: nowrap; /* Prevent text from wrapping */
+  border-right: 3px solid #333; /* Simulate cursor */
+  animation: typing 1s 4s steps(20) forwards, cursorDisappear 0.5s 2s forwards;
+  opacity: 0;
+}
+.k {
+  color: purple;
+}
+.w {
+  color: blueviolet;
+}
+.i {
+  color: #fff;
+}
+.z-1 {
+  color: darkorchid;
+}
+.z-2 {
+  color: yellow;
+}
+
+.text {
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 20px;
+  font-weight: 600;
+  letter-spacing: 3px;
+  text-shadow: 0 0.8rem 0.9rem rgba(0, 0, 0, 0.4);
+}
+
+.start-container {
+  display: grid;
+  max-width: 100%;
+  width: 500px;
+  opacity: 0;
+  animation: moveBanner 1s 5s forwards;
+}
+
+.another-text {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+
+.down-arrows {
+  display: flex;
+  place-content: center;
+  gap: 10px;
+  margin: 10px;
+}
+
+input {
+  height: 10vh;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  width: 30vw;
+  justify-self: center;
+  padding-left: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 5px;
+  border: 1px solid black;
+  border-bottom-width: 4px;
+  outline: none;
+}
+
+input:focus,
+input:valid {
+  border-color: rgb(67 56 202);
+}
+.error {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 5px;
+  color: rgb(54, 12, 12);
+  font-weight: bold;
+  display: none;
+}
+
+.start-quiz {
+  height: 10vh;
+  background: linear-gradient(135deg, rgba(17, 22, 78, 1), rgb(67 56 202));
+  border: none;
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: transform 1s ease-in-out;
+  width: 40vw;
+}
+.start-quiz:hover {
+  background: linear-gradient(-135deg, rgba(17, 22, 78, 1), rgb(67 56 202));
+  transform: scale(1.05);
+  cursor: pointer;
+}
 
 /* Animation */
 @keyframes movebackground {
-    from {
-        transform:  translateY(50%);
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateY(0%);
-        transform: translateX(0%);
-    }
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0%);
+    transform: translateX(0%);
+  }
+}
+
+@keyframes typing {
+  0% {
+    width: 0;
+    opacity: 1;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes cursorDisappear {
+  to {
+    border-right: none; /* Remove border when animation completes */
+  }
+}
+
+@keyframes moveBanner {
+  0% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
