--- a/style.css
+++ b/style.css
@@ -10,11 +10,9 @@
   font-family: "Poppins", sans-serif;
 }
 
-.first-container {
+body {
   width: 100%;
   height: 100vh;
-  position: relative;
-  perspective: 100rem;
   background-image: url(./assets/background.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -28,13 +26,14 @@
   padding: 40px;
   border: 1px solid #fff;
   border-radius: 3px;
-  max-width: 100%;
-  width: 600px;
+  max-width: 500px;
+  width: 100%;
   margin: 10px;
+  box-shadow: 0 25px 60px -12px rgba(0, 0, 0, 0.25);
 }
 
 .welcome {
-  font-size: 50px;
+  font-size: 35px;
   font-weight: bold;
   color: white;
   font-family: "Inter", sans-serif;
@@ -45,8 +44,9 @@
   overflow: hidden; /* Hide overflow to simulate typing effect */
   white-space: nowrap; /* Prevent text from wrapping */
   border-right: 3px solid #333; /* Simulate cursor */
-  animation: typing 1s 4s steps(20) forwards, cursorDisappear 0.5s 2s forwards;
+  animation: typing 1s 2s steps(20) forwards, cursorDisappear 0.5s 2s forwards;
   opacity: 0;
+  text-align: center;
 }
 .k {
   color: purple;
@@ -75,10 +75,10 @@
 
 .start-container {
   display: grid;
-  max-width: 100%;
-  width: 500px;
+  /* max-width: 100%;
+  width: 500px; */
   opacity: 0;
-  animation: moveBanner 1s 5s forwards;
+  animation: moveBanner 1s 3s forwards;
 }
 
 .another-text {
@@ -99,7 +99,7 @@ input {
   height: 10vh;
   margin-bottom: 10px;
   border-radius: 5px;
-  width: 30vw;
+  width: 100%;
   justify-self: center;
   padding-left: 20px;
   font-size: 20px;
@@ -133,11 +133,11 @@ input:valid {
   font-weight: bold;
   border-radius: 5px;
   transition: transform 1s ease-in-out;
-  width: 40vw;
+  /* width: 100%; */
 }
 .start-quiz:hover {
   background: linear-gradient(-135deg, rgba(17, 22, 78, 1), rgb(67 56 202));
-  transform: scale(1.05);
+  transform: scale(1.01);
   cursor: pointer;
 }
 
@@ -176,5 +176,35 @@ input:valid {
   100% {
     transform: translateY(0);
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 100%; /* Make it full width on tablets */
+    padding: 30px; /* Reduce padding for tablets */
+    margin: 0px; /* Reduce margin for tablets */
+  }
+}
+
+/* Media query for mobile devices */
+@media (max-width: 480px) {
+  .container {
+    border-left: none;
+    margin: 0; /* Remove margin for mobile */
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .welcome {
+    font-size: 25px;
+  }
+  input {
+    margin-left: 10px;
+    width: 80%;
+  }
+  .start-quiz {
+    margin-left: 10px;
+    width: 97%;
   }
 }
